package br.com.beep.model;
public enum BeepStatus { OK, ERRO_ESTOQUE, ERRO_VALIDACAO }
