
@startuml
class Usuario {
  +Long id
  +String nome
  +LocalDate dataNascimento
}
class Regra {
  +Long id
  +String nomeRegra
  +LocalDateTime dateCreated
}
class UsuarioRegra {
  +Long id
  +LocalDateTime dateCreated
}
class Produto {
  +Long id
  +String nome
  +int quantidadeEstoque
  +BigDecimal preco
}
class Beep {
  +Long id
  +LocalDateTime dataHora
  +BeepStatus status
}
enum BeepStatus {
  OK
  ERRO_ESTOQUE
  ERRO_VALIDACAO
}
Usuario "1" -- "0..*" UsuarioRegra
Regra "1" -- "0..*" UsuarioRegra
Usuario "1" -- "0..*" Beep
Produto "1" -- "0..*" Beep
@enduml
